--- a/src/seedu/addressbook/ui/DarkTheme.css
+++ b/src/seedu/addressbook/ui/DarkTheme.css
@@ -2,16 +2,16 @@
 
 .text-field {
     -fx-font-size: 12pt;
-    -fx-font-family: "Rockwell";
+    -fx-font-family: "Di­dot";
     -fx-font-weight: bold;
-    -fx-text-fill: green;
+    -fx-text-fill: lightblue;
     -fx-control-inner-background: derive(#1d1d1d,20%);
 }
 
 .text-area {
-    -fx-background-color: black;
+    -fx-background-color: pink;
     -fx-control-inner-background: black;
-    -fx-font-family: "Avant Garde";
-    -fx-font-size: 11pt;
+    -fx-font-family: "Di­dot";
+    -fx-font-size: 12pt;
     -fx-padding: 5 5 5 5;
 }
